--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -18,6 +18,9 @@ pipeline{
         NEXUS_LOGIN = 'nexuslogin'
         SONARSERVER = 'sonarserver'
         SONARSCANNER = 'sonarscanner'
+        registryCredential = 'ecr:us-east-2:awscreds'
+        appRegistry = '211125711489.dkr.ecr.us-east-2.amazonaws.com/vprofileappimg'
+        vprofileRegistry = 'https://211125711489.dkr.ecr.us-east-2.amazonaws.com'
     }
 
     stages{
@@ -87,6 +90,23 @@ pipeline{
                      type: 'war']
                   ]
                 )
+            }
+        }
+        stage('Build App Image'){
+            steps{
+                script{
+                    dockerImage = docker.build(appRegistry+" :$BUILD_NUMBER", "./Docker-files/app/multistage/")
+                }
+            }
+
+        }
+        stage('Upload App Image'){
+            steps{
+                script{
+                    docker.withRegistry( vprofileRegistry, registryCredential)
+                    dockerImage.push("$BUILD_NUMBER")
+                    dockerImage.push('latest')
+                }
             }
         }
 
